package com.example.sagivproject.services.impl;

import androidx.annotation.NonNull;
import androidx.annotation.Nullable;

import com.example.sagivproject.models.DailyStats;
import com.example.sagivproject.models.MedicationUsage;
import com.example.sagivproject.services.IDatabaseService.DatabaseCallback;
import com.example.sagivproject.services.IStatsService;
import com.example.sagivproject.utils.CalendarUtil;
import com.google.firebase.database.FirebaseDatabase;

import javax.inject.Inject;

/**
 * Implementation of the {@link IStatsService} interface.
 * <p>
 * This class handles updating daily statistics for the math game and memory game in the Firebase database.
 * It inherits from {@link BaseDatabaseService} to leverage common database operations and ensure
 * consistency across services.
 * </p>
 */
public class StatsServiceImpl extends BaseDatabaseService<DailyStats> implements IStatsService {
    private static final String USERS_PATH = "users";
    private static final String FIELD_DAILY_STATS = "dailyStats";
    private final CalendarUtil calendarUtil;

    /**
     * Constructs a new StatsServiceImpl.
     *
     * @param firebaseDatabase The FirebaseDatabase instance injected by Hilt.
     * @param calendarUtil     The CalendarUtil instance injected by Hilt.
     */
    @Inject
    public StatsServiceImpl(FirebaseDatabase firebaseDatabase, CalendarUtil calendarUtil) {
        super(firebaseDatabase, USERS_PATH, DailyStats.class);
        this.calendarUtil = calendarUtil;
    }

    /**
     * Generates the database path for a user's daily stats.
     *
     * @param uid  The user's unique identifier.
     * @param date The date string in "yyyy-MM-dd" format.
     * @return The database path string.
     */
    private String getStatsPath(String uid, String date) {
        return USERS_PATH + "/" + uid + "/" + FIELD_DAILY_STATS + "/" + date;
    }

    /**
     * Updates the daily math game statistics for a specific user.
     * If no statistics exist for today, a new entry is created.
     *
     * @param uid     The user's unique identifier.
     * @param correct True if the answer was correct, false otherwise.
     */
    @Override
    public void updateDailyMathStats(@NonNull String uid, boolean correct) {
        String today = calendarUtil.getCurrentDate();
        runTransaction(getStatsPath(uid, today), stats -> {
            DailyStats currentStats = (stats != null) ? stats : new DailyStats();
            currentStats.setId(today);
            if (correct) currentStats.addMathCorrect();
            else currentStats.addMathWrong();
            return currentStats;
        }, null);
    }

    /**
     * Updates the daily memory game statistics for a specific user.
     * Increments the games played count and win count if applicable.
     *
     * @param uid   The user's unique identifier.
     * @param isWin True if the user won the game, false otherwise.
     */
    @Override
    public void updateDailyMemoryStats(@NonNull String uid, boolean isWin) {
        String today = calendarUtil.getCurrentDate();
        runTransaction(getStatsPath(uid, today), stats -> {
            DailyStats currentStats = (stats != null) ? stats : new DailyStats();
            currentStats.setId(today);
            currentStats.addMemoryGamePlayed();
            if (isWin) {
                currentStats.addMemoryWin();
            }
            return currentStats;
        }, null);
    }

    /**
     * Logs medication usage for a specific user and updates daily statistics for today.
     * Tracks medication taken or missed and adds the usage log entry.
     *
     * @param uid      The user's unique identifier.
     * @param usage    The medication usage information to log.
     * @param callback Optional callback to be notified when the operation completes or fails.
     */
    @Override
    public void logMedicationUsage(@NonNull String uid, @NonNull MedicationUsage usage, @Nullable DatabaseCallback<Void> callback) {
        String today = calendarUtil.getCurrentDate();
        runTransaction(getStatsPath(uid, today), stats -> {
            DailyStats currentStats = (stats != null) ? stats : new DailyStats();
            currentStats.setId(today);

            currentStats.addMedicationUsageLog(usage);
            return currentStats;
        }, (callback == null) ? null : new DatabaseCallback<>() {
            @Override
            public void onCompleted(DailyStats result) {
                callback.onCompleted(null);
            }

            @Override
            public void onFailed(Exception e) {
                callback.onFailed(e);
            }
        });
    }
}