@startuml
class services.impl.StatsServiceImpl {
- {static} String USERS_PATH
- {static} String FIELD_DAILY_STATS
- CalendarUtil calendarUtil
- String getStatsPath(String,String)
+ void updateDailyMathStats(String,boolean)
+ void updateDailyMemoryStats(String,boolean)
+ void logMedicationUsage(String,MedicationUsage,DatabaseCallback<Void>)
}


class services.impl.ImageServiceImpl {
- {static} String IMAGES_PATH
+ void getAllImages(DatabaseCallback<List<ImageData>>)
+ void createImage(ImageData,DatabaseCallback<Void>)
+ void updateAllImages(List<ImageData>,DatabaseCallback<Void>)
+ void deleteImage(String,DatabaseCallback<Void>)
}


class services.impl.MemoryGameServiceImpl {
- {static} String ROOMS_PATH
- {static} String FIELD_STATUS
- {static} String FIELD_CARDS
- {static} String FIELD_CURRENT_TURN_UID
- {static} String FIELD_IS_REVEALED
- {static} String FIELD_IS_MATCHED
- {static} String FIELD_PROCESSING_MATCH
- {static} String FIELD_WINNER_UID
- {static} String STATUS_WAITING
- {static} String STATUS_PLAYING
- {static} String STATUS_FINISHED
- DatabaseReference roomsReference
- Map<String,ValueEventListener> roomStatusListeners
- ValueEventListener activeGameListener
- ValueEventListener allRoomsListener
+ void findOrCreateRoom(User,DatabaseCallback<GameRoom>)
+ void getAllRoomsRealtime(DatabaseCallback<List<GameRoom>>)
+ void stopAllRoomsRealtime()
+ void listenToRoomStatus(String,IRoomStatusCallback)
+ void removeRoomListener(String)
+ void cancelRoom(String,DatabaseCallback<Void>)
+ void initGameBoard(String,List<Card>,String,DatabaseCallback<Void>)
+ void listenToGame(String,DatabaseCallback<GameRoom>)
+ void stopListeningToGame(String)
+ void updateRoomField(String,String,Object)
+ void incrementScore(String,String,DatabaseCallback<Void>)
+ void finishGame(String,String,DatabaseCallback<Boolean>)
+ void updateCardStatus(String,int,boolean,boolean)
+ void setProcessing(String,boolean)
+ void setupForfeitOnDisconnect(String,String)
+ void removeForfeitOnDisconnect(String)
}




services.IStatsService <|.. services.impl.StatsServiceImpl
services.impl.BaseDatabaseService <|-- services.impl.StatsServiceImpl
services.IImageService <|.. services.impl.ImageServiceImpl
services.impl.BaseDatabaseService <|-- services.impl.ImageServiceImpl
services.IMemoryGameService <|.. services.impl.MemoryGameServiceImpl
services.impl.BaseDatabaseService <|-- services.impl.MemoryGameServiceImpl
@enduml